# denoiser

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  bench-results.json
.githooks/: README.md  pre-commit
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: brand-monitor.yml  ci.yml  release.yml
charts/: bench-chart.html  bench-results.json  scenarios.html
src/: lib.rs  main.rs  pipeline.rs  stream.rs
src/bench/: corpus.rs  mod.rs
src/filters/: ansi.rs  cargo.rs  dedup.rs  docker.rs  generic.rs  git.rs  kubectl.rs  mod.rs  npm.rs  progress.rs
src/hooks/: claude.rs  codex.rs  gemini.rs  mod.rs
src/tracker/: db.rs  mod.rs
