[package]
name = "cli-denoiser"
version = "0.1.1"
edition = "2024"
description = "CLI proxy that strips terminal noise for LLM agents. Zero false positives."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Orellius/cli-denoiser"
keywords = ["cli", "terminal", "llm", "agent", "denoiser"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.clippy]
all = "deny"
pedantic = "deny"
